First HTML content

--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -2,7 +2,7 @@
 doctype html
 html(lang="es-ES")
   head
-    title Page Title
+    title Santiago Martín Pulido - Programador Frontend
     
     include partials/head.pug
     
@@ -13,5 +13,7 @@ html(lang="es-ES")
     include partials/header.pug
 
     main.bodyContent
-      
-    include partials/footer.pug
+      include components/greeting.pug
+      include components/experience-list.pug
+      include components/sideproject-list.pug
+      include components/education-list.pug
