--- a/src/templates/partials/header.pug
+++ b/src/templates/partials/header.pug
@@ -2,4 +2,18 @@
 header.header
   .wrapper
 
-    
+    .personal
+      h1.personal__fullname Santi Martin Pulido
+        span.hide  - 
+        span.personal__position Programador Frontend
+
+      img(src="img/me.jpg" alt="Photto of me looking ahead and smiling").personal__photo
+
+
+      ul
+        li
+          a(href="mailto:smartinpulido@gmail.com" title="Send me an email").personal__email smartinpulido@gmail.com
+        li
+          a(href="tel:625909816" title="Call me").personal__phone 625.90.98.16
+        li
+          a(href="http://linkedin.com/in/martinpulido" title="Visit my LinkedIn profile").personal__website linkedin.com/in/martinpulido
