--- a/src/templates/partials/head.pug
+++ b/src/templates/partials/head.pug
@@ -3,4 +3,4 @@ meta(http-equiv="Content-Type" content="text/html; charset=UTF-8")
 meta(name="viewport" content="initial-scale=1.0, width=device-width")
 
 link(rel="shortcut icon" href="favicon.ico")
-link(href="https://fonts.googleapis.com/css?family=Roboto:100,400,700" rel="stylesheet")
+link(href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,600i,800" rel="stylesheet")
