--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,167 +1,7 @@
-
 .header {
-  position: static;
-  .wrapper {
-    display: flex;
-    justify-content: space-between;
-  }
-
-}
-
-.logo-link {
-  margin: $gutter-header/2 0 0 $gutter-header;
-  width: 10rem;
-  .logo {
-    width: 100%;
-  }
-}
-
-.menu-link {
-  margin: $gutter-header $gutter-header 0 0;
-}
-
-.wrapper-main-nav {
-  position: absolute;
-  top: 0;
-  right: -100%;
-  z-index: 2;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: flex-start;
-  width: 90%;
-  height: 100%;
-  background: $atis-blue;
-  transition: right .2s linear;
-  &.open {
-    overflow: auto;
-    right: 0;
-    transition: right .2s linear;
-  }
-
-  .logo-link {
-    margin-right: $gutter-header;
-  }
-  
-  .close-menu {
-    margin: $gutter-header $gutter-header 0 0;
-  }
-
-  .main-nav {
-    margin-bottom: $gutter-header*2;
-    width: 100%;
-    font-size: 1.6rem;
-
-    &__list {
-      list-style-type: none;
-    }
-
-    &__item:not(:last-child) { 
-      margin-top: -1px;
-      border-top: solid 1px $atis-blue;
-      border-bottom: solid 1px $atis-blue;
-      border-left: solid 5px $white;
-      background-color: $white;
-      
-      a {
-        display: block;
-        padding: .6em 1em;
-        color: $atis-blue-gray;
-        text-decoration: none
-      }
-
-      &.active {
-        border-left-color: $atis-blue;
-
-        a {
-          font-weight: bold;
-          color: $atis-blue;
-        }
-      }
-
-      /*Overwrite font-awesome icon*/
-      .fa { 
-        width: 20px;
-
-        &-plane { 
-          font-size: 20px;
-          &:before { 
-            position: absolute;
-            transform: translateY(-14px);
-          }
-        }
-      }
-    }
-    &__item:last-child {
-      padding: 2rem;
-      a.become-a-host {
-        border: solid 1px $atis-blue;
-        width: 100%;
-        font-size: 1.6rem;
-        color: $atis-blue-gray;
-        text-align: center;
-        transition: all .2s linear;
-        &:hover {
-          font-weight: bold;
-          color: $atis-blue;
-          background-color: $white;
-          transition: all .2s linear;
-        }
-      }
-    }
-
-  }
-}
-
-@media screen and (min-width: $desktop){
-  .header .wrapper {
-    padding: 2rem 3rem;
-  }
-
-  .menu-link {
-    display: none;
-  }
-  .wrapper-main-nav {
-    position: static;
-    align-self: center;
-    background: transparent;
+    margin-bottom: $gap*2;
     
-    .logo-link, .close-menu {
-      display: none;
+    @media screen and (min-width: $tablet) {
+        margin-top: $gap*2;
     }
-
-    .main-nav {
-      margin-bottom: 0;
-      font-size: 1.4rem;
-      
-      &__list {
-        text-align: right;
-      }
-  
-      &__item {
-        display: inline;
-        
-        &:not(:last-child) {
-          border: none;
-
-          a {
-            display: inline;
-            padding: 0 .8em;
-          }
-        }
-  
-        .fa {
-          display: none;
-        }
-
-        &:last-child a.become-a-host {
-          border: none;
-          width: auto;
-          font-size: 1.4rem;
-          color: $atis-blue;
-        }
-      }
-    }
-
-  }
 }
