--- a/src/templates/components/education-list.pug
+++ b/src/templates/components/education-list.pug
@@ -2,7 +2,7 @@
 include education-item.pug
 
 section.education
-  h2.title-2 Education
+  h2.title-2 Formación
 
   //- education-item (company,position,dates)
   +education-item('CEEP', 'Técnico Superior en Desarrollo de Aplicaciones Informáticas', 'Oct 2001 - Mar 2003')
