--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -13,7 +13,8 @@ html(lang="es-ES")
     include partials/header.pug
 
     main.bodyContent
-      include components/greeting.pug
-      include components/experience-list.pug
-      include components/sideproject-list.pug
-      include components/education-list.pug
+      .wrapper
+        include components/greeting.pug
+        include components/experience-list.pug
+        include components/sideproject-list.pug
+        include components/education-list.pug
