--- a/src/templates/partials/header.pug
+++ b/src/templates/partials/header.pug
@@ -7,13 +7,13 @@ header.header
         span.hide  - 
         span.personal__position Programador Frontend
 
-      img(src="img/me.jpg" alt="Photto of me looking ahead and smiling").personal__photo
+      img(src="img/me.jpg" alt="Yo, sonriendo y mirando a cámara").personal__photo
 
 
-      ul
-        li
-          a(href="mailto:smartinpulido@gmail.com" title="Send me an email").personal__email smartinpulido@gmail.com
-        li
-          a(href="tel:625909816" title="Call me").personal__phone 625.90.98.16
-        li
-          a(href="http://linkedin.com/in/martinpulido" title="Visit my LinkedIn profile").personal__website linkedin.com/in/martinpulido
+      ul.personal__contact
+        li.personal__contact__item
+          a(href="mailto:smartinpulido@gmail.com" title="Envíame un email").personal__email smartinpulido@gmail.com
+        li.personal__contact__item
+          a(href="tel:625909816" title="Llámame").personal__phone 625.90.98.16
+        li.personal__contact__item
+          a(href="http://linkedin.com/in/martinpulido" title="Visita mi perfil de LinkedIn").personal__website linkedin.com/in/martinpulido
