--- a/src/sass/helpers/_variables.scss
+++ b/src/sass/helpers/_variables.scss
@@ -11,13 +11,9 @@ $black: #000000;
 $gray: #e9e9e9;
 
 // Corporative colors
-$atis-blue: #017dfb;
-$atis-blue-light: #019ffc;
-$atis-blue-extralight: #dfeffe;
-$atis-blue-gray: #697899;
-$atis-blue-sky: #0dcfff;
-$atis-gray: #bdbdbd;
-$atis-white-gray: #f9f9f9;
+$resume-blue: rgba(31, 73, 125, 1);             //hsla(151, 154, 78, 1);
+$resume-gray: rgba(89, 89, 89, 1);              //hsla(170, 0, 64, 1);
+$resume-gray-light: rgba(127, 127, 127, 1);     //hsla(170, 0, 170, 1);
 
 // Other colors
 
@@ -26,8 +22,9 @@ $error: #c64848;
 $ok: #0a881c;
 
 //Fonts
-@include font-face('Molle', 'molle-regular-webfont');
-$roboto: 'Roboto', Arial, helvetica, sans-serif;
-$molle : 'Molle', Arial, Helvetica, sans-serif;
+@include font-face("Cambria", "fonts/subset-Cambria", null, null, "woff2 woff");
+$cambria: "Cambria", Georgia, serif;
 
-$gutter-header: 1em;
+
+//Gaps
+$gap: 1rem;
