--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -1,4 +1,4 @@
-/*@import 'helpers/mixins';
+@import 'helpers/mixins';
 @import 'base/normalize';
 @import 'helpers/variables';
 @import 'base/generic';
@@ -7,6 +7,8 @@
 @import 'layout/grid';
 
 // COMPONENTS
-
-
-@import 'layout/footer';*/
+@import 'components/personal';
+@import 'components/greeting';
+@import 'components/experience';
+@import 'components/sideproject';
+@import 'components/education';
