--- a/src/templates/components/education-item.pug
+++ b/src/templates/components/education-item.pug
@@ -1,6 +1,7 @@
 //- components/education-item.pug
 mixin education-item (company,position,dates)
   article.education__item
-    h3.title-3= company
-    h4= position
-    h5= dates
+    header
+      h1.title-3= company + " / "
+        span.experience__item__position=position
+      h2.dates= dates
