--- a/src/templates/components/experience-item.pug
+++ b/src/templates/components/experience-item.pug
@@ -5,16 +5,19 @@ mixin experience-item (company,position,dateInit,dateEnd,description,projects,ta
       h1.title-3=company + " / "
         span.experience__item__position=position
       h2.dates= "("
-        time(datetime=dateInit.datetime)=dateInit.name + " - "
-        time(datetime=dateEnd.datetime)=dateEnd.name + ")"
+        time(datetime=dateInit.datetime)=dateInit.name
+        |  - 
+        time(datetime=dateEnd.datetime)=dateEnd.name 
+        | )
     .wysiwyg
-      p= description
+      p !{description}
       p Proyectos destacados:
-      ul.projects
+      ul
         each project in projects
-          li.project__item
-            strong= project.name + " / "
-            a(href=project.url, target="_blank", title="Abre enlace externo en ventana nueva")=project.url
+          li
+            p
+              strong= project.name + " / "
+              a(href=project.url, target="_blank", title="Abre enlace externo en ventana nueva")=project.url
 
     h3.hide Habilidades
     ul.tags
